# rinha-backend-2026

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  info.json  nginx.conf  pyproject.toml
src/: main.py
src/routes/: favicon.py  fraud_score.py  index.py  ready.py
src/schemas/: fraud.py
