[project]
name = "rinha-backend-2026"
version = "0.1.0"
author = "Johni Douglas Marangon"
description = "Rinha de Backend 2026"
requires-python = ">=3.14"
dependencies = [
    "litestar>=2.21",
    "uvicorn[standard]>=0.30",
    "uvloop>=0.21",
    "pydantic>=2.8",
    "zvec>=0.4.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
]
